syntax = "proto3";

option go_package = "proto";

package echo;

service Echo {
    rpc EchoBack(EchoRequest) returns (EchoResponse) {}

}

message EchoRequest {
    string msgRequest = 1;
}

message EchoResponse {
    string msgReponse = 1;
}
